# ntt-3d-game-engine

./: .gitignore  README.md  config.cfg  game-engine.code-workspace  helper.py  project.cfg  projects.json  pyproject.toml
autogen/: autogen.py  binding.py  blueprint.py  command.py  constants.py  log.py  main.py  models.py  pyproject.toml  settings.json
autogen/parser/: __init__.py  parser.py  py_class.py  py_common.py  py_constant.py  py_enum.py  py_function.py  py_object.py  py_struct.py  py_typedef.py  py_union.py  py_variable.py  utils.py
autogen/templates/: binding.j2  enum_utils.j2  json_writer.j2  pyi.j2
autogen/templates/binding/: class.j2  enum.j2  function.j2  struct.j2
autogen/templates/binding/class/: common.j2
autogen/templates/json_writer/: common.j2
autogen/templates/pyi/: class.j2  common.j2  enum.j2  function.j2  struct.j2  typedef.j2
autogen/tests/parser/: test_annotations.py  test_parse_class.py  test_parse_enum.py  test_parse_function.py  test_parse_struct.py  test_parse_typedef.py  test_parse_union.py  test_parse_variables.py  test_primitive_type.py
autogen/tests/utils/: test_utils.py
autogen/utils/: __init__.py  file_cache.py  log.py  template_str.py
core/: .gitignore  CMakeLists.txt  config.cfg
core/assets/shaders/opengl/: default.frag  default.vert
core/assets/shaders/vulkan/: default.frag  default.vert
core/config/: common_release.cfg
core/include/: pch.h
core/include/containers/: containers.h  json.h  release_stack.h  string.h
core/include/core/: core.h
core/include/core/containers/: array.h  containers.h  flat_map.h  json.h  string.h
core/include/core/memory/: allocator.h  allocator_types.h  linear_allocator.h  malloc_allocator.h  memory.h  memory_system.h  memory_utils.h  stack_allocator.h
core/include/engine/: engine.h
core/include/graphics/: graphics.h  image.h  program.h  renderer.h  shader.h  surface.h  types.h  uniform_buffer.h  vertex_buffer.h
core/include/graphics/opengl/: opengl_common.h  program_opengl.h  renderer_opengl.h  shader_opengl.h  surface_opengl.h  uniform_buffer_opengl.h  vertex_buffer_opengl.h
core/include/graphics/vulkan/: image_vulkan.h  program_vulkan.h  renderer_vulkan.h  shader_vulkan.h  surface_glfw_vulkan.h  surface_vulkan.h  uniform_buffer_vulkan.h  vertex_buffer_vulkan.h  vulkan_buffer.h  vulkan_command_buffer.h  vulkan_command_pool.h  vulkan_common.h  vulkan_device.h  vulkan_fence.h  vulkan_framebuffer.h  vulkan_queue.h  vulkan_renderer.h  vulkan_renderpass.h  vulkan_semaphore.h  vulkan_swapchain.h
core/include/input/: input.h  keys.h  manager.h
core/include/json_writer/: json_writer.h
core/include/project/: application.h  editor_application.h  ide_application.h  layer.h  project.h  project_impl.h  runtime_application.h  types.h
core/include/utils/: logger.h  singleton.h  utils.h
core/include/utils/id/: id.h  id_impl.h  id_manager.h
core/include/utils/logger/: handler.h  logger.h  types.h
core/src/containers/: json.cpp  release_stack.cpp  string.cpp
core/src/core/containers/: hash.cpp  json.cpp  string.cpp
core/src/core/memory/: allocator.cpp  linear_allocator.cpp  malloc_allocator.cpp  memory_system.cpp  memory_system_internal.h  memory_utils.cpp  stack_allocator.cpp
core/src/graphics/: types.cpp
core/src/graphics/opengl/: program_opengl.cpp  renderer_opengl.cpp  shader_opengl.cpp  surface_opengl.cpp  uniform_buffer_opengl.cpp  vertex_buffer_opengl.cpp
core/src/graphics/vulkan/: image_vulkan.cpp  program_vulkan.cpp  renderer_vulkan.cpp  shader_vulkan.cpp  surface_glfw_vulkan.cpp  surface_vulkan.cpp  uniform_buffer_vulkan.cpp  vertex_buffer_vulkan.cpp  vulkan_buffer.cpp  vulkan_command_buffer.cpp  vulkan_command_pool.cpp  vulkan_common.cpp  vulkan_device.cpp  vulkan_fence.cpp  vulkan_framebuffer.cpp  vulkan_queue.cpp  vulkan_renderer.cpp  vulkan_renderpass.cpp  vulkan_semaphore.cpp  vulkan_swapchain.cpp
core/src/input/: manager.cpp
core/src/json_writer/: json_writer.cpp
core/src/project/: application.cpp  editor_application.cpp  ide_application.cpp  layer.cpp  project.cpp  runtime_application.cpp
core/src/utils/: singleton.cpp
core/src/utils/id/: id.cpp  id_manager.cpp
core/src/utils/logger/: console_handler.cpp  console_handler.h  editor_handler.cpp  editor_handler.h  logger.cpp  types.cpp
core/tests/: test_common.h
core/tests/tests/: test_array.cpp  test_flat_map.cpp  test_id.cpp  test_json_writer.cpp  test_string.cpp
editor/: .gitignore  constants.py  install.py  log.py  main.py  pyproject.toml
editor/Engine/: __init__.py
editor/common/: __init__.py  app_settings.py
editor/common_models/: __init__.py  application_context.py
editor/components/: __init__.py
editor/components/gl_widget/: __init__.py  gl_shared.py  gl_widget_model.py  gl_widget_view.py  gl_widget_view_model.py
editor/components/toggle_button/: __init__.py  toggle_button_view.py  toggle_button_viewmodel.py
editor/di/: di.py
editor/tests/: test_di.py  test_signal.py
editor/tests/e2e/: test_create_project.py  test_open_window.py
editor/tests/e2e/e2e_utils/: __init__.py  setup_fixture.py
editor/uis/: editor_main_window.ui  log_widget.ui  new_project.ui  scene_widget.ui
editor/utils/: __init__.py  log.py  signal.py
editor/windows/main_window/: __init__.py  main_window_model.py  main_window_view.py  main_window_view_model.py  view.py  view_model.py
editor/windows/main_window/widgets/: __init__.py
editor/windows/main_window/widgets/log_widget/: __init__.py  log_widget_model.py  log_widget_view.py  log_widget_view_model.py
editor/windows/main_window/widgets/scene_widget/: __init__.py  (+1 more)
editor/windows/new_project_window/: __init__.py  new_project_window_model.py  new_project_window_view.py  new_project_window_view_model.py
ide/: CMakeLists.txt  config.cfg
ide/src/: ide_application.cpp  ide_application.h  main.cpp
runtime/: CMakeLists.txt  config.cfg
runtime/bootapp/: project.json
runtime/config/: common_dev.cfg  linux_dev copy.cfg
runtime/src/: imgui_layer.cpp  imgui_layer.h  main.cpp  runtime_application.cpp  runtime_application.h
(+29 files in other folders)
